force-app/main/default/objects/c_LogSetting__mdt/c_LogSetting__mdt.object-meta.xml
<CustomObject>
    <description>Define how the application should generate logs. Mark at least ONE entry as the default setting. Settings may be applied also at the User (User name) OR Profile (Profile ID) level.</description>
    <label>Log Setting</label>
    <pluralLabel>Log Settings</pluralLabel>
</CustomObject>