force-app/main/default/objects/c_LogSetting__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Note that a record marked as Default should not be marked inactive!</description>
    <inlineHelpText>Note that a record marked as Default should not be marked inactive!</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>