force-app/main/default/objects/c_LogSetting__mdt/fields/DebugPrefix__c.field-meta.xml
<CustomField>
    <fullName>DebugPrefix__c</fullName>
    <defaultValue>&quot;@@&quot;</defaultValue>
    <description>Text to proceed a debug entry</description>
    <inlineHelpText>Text to proceed a debug entry</inlineHelpText>
    <label>Debug Prefix</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>