force-app/main/default/objects/c_LogSetting__mdt/fields/Default__c.field-meta.xml
<CustomField>
    <fullName>Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Important! At least one entry should be default.</description>
    <inlineHelpText>Important! At least one entry should be default.</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>