force-app/main/default/objects/c_LogSetting__mdt/fields/EventLogging__c.field-meta.xml
<CustomField>
    <fullName>EventLogging__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When set, any event that has a cateogry matching those in "Categories", or marked as "Important" will fire a platform event</description>
    <inlineHelpText>When set, any event that has a cateogry matching those in "Categories", or marked as "Important" will fire a platform event</inlineHelpText>
    <label>Event Logging</label>
    <type>Checkbox</type>
</CustomField>