force-app/main/default/objects/c_LogSetting__mdt/fields/Important__c.field-meta.xml
<CustomField>
    <fullName>Important__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If a log entry is marked as &quot;Important&quot; then it should always fire a platform event</description>
    <inlineHelpText>If a log entry is marked as &quot;Important&quot; then it should always fire a platform event</inlineHelpText>
    <label>Send All Important Entries As Events</label>
    <type>Checkbox</type>
</CustomField>