force-app/main/default/objects/c_LogSetting__mdt/fields/limitWarningThreshold__c.field-meta.xml
<CustomField>
    <fullName>limitWarningThreshold__c</fullName>
    <defaultValue>0.75</defaultValue>
    <description>Defines as a percent how high limits should go before they throw a warning. Recommendation is to put this at 75%</description>
    <inlineHelpText>Defines as a percent how high limits should go before they throw a warning. Recommendation is to put this at 75%</inlineHelpText>
    <label>Limit Warning Threshold</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>