force-app/main/default/objects/c_LogSetting__mdt/fields/MonitorLimits__c.field-meta.xml
<CustomField>
    <fullName>MonitorLimits__c</fullName>
    <defaultValue>&quot;BASICS&quot;</defaultValue>
    <description>A list of limits to monitor. Choose "BASICS" or a comma separated list of "APEX,CALLOUTS,DATABASE"</description>
    <inlineHelpText>A list of limits to monitor. Choose from:
BASICS,APEX,CALLOUTS,DATABASE</inlineHelpText>
    <label>Limits to Monitor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>