force-app/main/default/objects/c_LogSetting__mdt/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <description>OPTIONAL The full username ex. sarah.exec@company.org.sandboxname. Use this to have a particular set up for a specific user.</description>
    <inlineHelpText>OPTIONAL The full username ex. sarah.exec@company.org.sandboxname. Use this to have a particular set up for a specific user.</inlineHelpText>
    <label>User Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>